added actions and updated Expect, plus a few more synrax sugar updates.