@@ -1,12 +1,15 @@
-package io.github.dantegrek.screenplay;
+package io.github.dantegrek.jplay;
 
 import com.microsoft.playwright.BrowserContext;
+import com.microsoft.playwright.Frame;
 import com.microsoft.playwright.Page;
 import com.microsoft.playwright.options.LoadState;
 import com.microsoft.playwright.options.MouseButton;
 import com.microsoft.playwright.options.WaitUntilState;
 
+import java.nio.file.Path;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * This is main class in project. Ir represents actor which act with system under test.
@@ -15,7 +18,6 @@ public final class Actor {
 
     private Configuration configuration = new Configuration(this);
     private BrowserManager browserManager = new BrowserManager();
-
     private static ThreadLocal<Actor> actor = ThreadLocal.withInitial(() -> new Actor());
 
     private Actor() {
@@ -50,6 +52,7 @@ public final class Actor {
 
     /**
      * This method creates new and clear configuration instance.
+     *
      * @return instance of Configuration
      */
     public Configuration cleanConfig() {
@@ -60,24 +63,27 @@ public final class Actor {
 
     /**
      * This method starts browser with new context and tab.
+     *
      * @return instance of Actor
      */
-    public Actor createBrowser() {
-        this.getBrowserManager().create(this.configuration);
+    public Actor startBrowser() {
+        this.getBrowserManager().startBrowserContextAndTab(this.configuration);
         return actor.get();
     }
 
     /**
      * This method start browser without context and tab.
+     *
      * @return instance of Actor
      */
-    public Actor createPureBrowser() {
-        this.getBrowserManager().createBrowser(this.configuration);
+    public Actor startPureBrowser() {
+        this.getBrowserManager().startBrowserOnly(this.configuration);
         return actor.get();
     }
 
     /**
      * This method closes browser with context and tab.
+     *
      * @return instance of Actor
      */
     public Actor closeBrowser() {
@@ -85,45 +91,51 @@ public final class Actor {
         this.getBrowserManager().setBrowser(null);
         this.getBrowserManager().setBrowserContext(null);
         this.getBrowserManager().setPage(null);
+        this.getBrowserManager().setFrame(null);
         return this;
     }
 
     // Context methods
 
     /**
-     * This method creates new context and tab. Can be used after 'createPureBrowser()'
+     * This method creates new context and tab. Can be used after 'startPureBrowser()'
      * or to create new incognito tab.
+     *
      * @return instance of Actor
      */
     public Actor createContextAndTab() {
-        this.getBrowserManager().createContextAndTab(this.configuration);
+        this.getBrowserManager().createContextWithTab(this.configuration);
         return actor.get();
     }
 
     /**
      * This method closes current context with tab.
+     *
      * @return instance of Actor
      */
     public Actor closeCurrentContext() {
         this.getBrowserManager().getBrowserContext().close();
+        this.getBrowserManager().setFrame(null);
         return this;
     }
 
     /**
      * This method allow user to access all contexts.
+     *
      * @return List of BrowserContexts.
      */
     private List<BrowserContext> getContextsFromBrowser() {
         List<BrowserContext> contexts = this.getBrowserManager().getBrowser().contexts();
         if (contexts.isEmpty()) {
             throw new RuntimeException("Browser does not have contexts, please start one using method " +
-                    "'createContextAndTab()' or use 'createBrowser()' to create browser with context and tab.");
+                    "'createContextAndTab()' or use 'startBrowser()' to create browser with context and tab.");
         }
         return contexts;
     }
 
     /**
      * This method switch focus between contexts.
+     *
      * @param index of context in list.
      * @return instance of Actor
      */
@@ -135,8 +147,10 @@ public final class Actor {
 
     // Page methods
 
+
     /**
      * This method get access to current page/tab.
+     *
      * @return instance of active tab.
      */
     public Page currentPage() {
@@ -144,8 +158,19 @@ public final class Actor {
     }
 
     /**
+     * This method returns wrapped Frame instance of current page if actor did not switch explicitly.
+     *
+     * @return Frame
+     */
+    public Frame currentFrame() {
+        return this.getBrowserManager().getFrame() == null ?
+                this.getBrowserManager().getPage().mainFrame() : this.getBrowserManager().getFrame();
+    }
+
+    /**
      * This method opens new tab in scope of the same context, such tab will have common localstorage,
      * session storage and cookies with previous one.
+     *
      * @return instance of Actor
      */
     public Actor openNewTab() {
@@ -153,7 +178,7 @@ public final class Actor {
         if (context == null) {
             throw new RuntimeException("You can not open new tab without context. " +
                     "Please use 'createContextAndTab()' instead of 'openNewTab()' " +
-                    "or 'createBrowser()' instead of 'createPureBrowser()', it will create browser with tab.");
+                    "or 'startBrowser()' instead of 'startPureBrowser()', it will create browser with tab.");
         }
         this.getBrowserManager().setPage(context.newPage());
         return actor.get();
@@ -161,10 +186,12 @@ public final class Actor {
 
     /**
      * This method closes tab in focus.
+     *
      * @return instance of Actor
      */
     public Actor closeCurrentTab() {
         this.getBrowserManager().getPage().close();
+        this.getBrowserManager().setFrame(null);
         return actor.get();
     }
 
@@ -180,6 +207,7 @@ public final class Actor {
 
     /**
      * This method switch tab in current context.
+     *
      * @param index of tab in current context
      * @return instance of Actor
      */
@@ -192,12 +220,13 @@ public final class Actor {
 
     /**
      * This method switch tab in current context.
+     *
      * @param title of tab.
      * @return instance of Actor
      */
     public Actor switchTabByTitle(String title) {
         List<Page> pages = this.getPagesFromCurrentContext().stream()
-                .filter(tab -> tab.title().equals(title)).toList();
+                .filter(tab -> tab.title().equals(title)).collect(Collectors.toList());
         if (pages.size() > 1) {
             throw new RuntimeException("More then one tab in current context has title '" + title +
                     "', in such cases better to use switchTabByIndex(int index).");
@@ -205,6 +234,32 @@ public final class Actor {
             throw new RuntimeException("None of tabs in current context has title '" + title + "'");
         }
         this.getBrowserManager().setPage(pages.get(0));
+        return actor.get();
+    }
+
+    /**
+     * This method point all actors actions into Fame.
+     *
+     * @param selector should point on html tag 'iframe'
+     * @return instance of Actor
+     */
+    public Actor switchOnFrame(String selector) {
+        Frame frame = this.currentFrame().locator(selector).elementHandle().contentFrame();
+        if (frame != null) {
+            this.getBrowserManager().setFrame(frame);
+        } else {
+            throw new RuntimeException("Iframe was not fund by selector: '" + selector + "'");
+        }
+        return actor.get();
+    }
+
+    /**
+     * This method always return actor to wrapped current page in Frame
+     *
+     * @return instance of Actor
+     */
+    public Actor switchOnMainFrame() {
+        this.getBrowserManager().setFrame(null);
         return actor.get();
     }
 
@@ -275,7 +330,7 @@ public final class Actor {
      * @return instance of Actor
      */
     public Actor click(String selector) {
-        this.getBrowserManager().getPage().click(selector);
+        this.currentFrame().click(selector);
         return this;
     }
 
@@ -286,7 +341,7 @@ public final class Actor {
      * @return instance of Actor
      */
     public Actor rightClick(String selector) {
-        this.getBrowserManager().getPage().click(selector, new Page.ClickOptions().setButton(MouseButton.RIGHT));
+        this.currentFrame().click(selector, new Frame.ClickOptions().setButton(MouseButton.RIGHT));
         return this;
     }
 
@@ -297,7 +352,7 @@ public final class Actor {
      * @return instance of Actor
      */
     public Actor doubleClick(String selector) {
-        this.getBrowserManager().getPage().dblclick(selector);
+        this.currentFrame().dblclick(selector);
         return this;
     }
 
@@ -309,7 +364,7 @@ public final class Actor {
      * @return instance of Actor
      */
     public Actor dragAndDrop(String sourceSelector, String targetSelector) {
-        this.getBrowserManager().getPage().dragAndDrop(sourceSelector, targetSelector);
+        this.currentFrame().dragAndDrop(sourceSelector, targetSelector);
         return this;
     }
 
@@ -320,7 +375,7 @@ public final class Actor {
      * @return instance of Actor
      */
     public Actor check(String selector) {
-        this.getBrowserManager().getPage().check(selector);
+        this.currentFrame().check(selector);
         return this;
     }
 
@@ -331,8 +386,90 @@ public final class Actor {
      * @return instance of Actor
      */
     public Actor uncheck(String selector) {
-        this.getBrowserManager().getPage().uncheck(selector);
+        this.currentFrame().uncheck(selector);
         return this;
+    }
+
+    /**
+     * This method type chars one by one.
+     *
+     * @param selector css or xpath
+     * @param text     value
+     * @return instance of Actor
+     */
+    public Actor typeText(String selector, String text) {
+        this.currentFrame().type(selector, text);
+        return this;
+    }
+
+    /**
+     * This method puts text in to field.
+     *
+     * @param selector css of xpath
+     * @param text     value
+     * @return instance of Actor
+     */
+    public Actor fillText(String selector, String text) {
+        this.currentFrame().fill(selector, text);
+        return this;
+    }
+
+    /**
+     * This method taps an element matching selector by performing the following steps:
+     * Find an element matching selector. If there is none, wait until a matching element is attached to the DOM.
+     * Wait for actionability checks on the matched element, unless force option is set. If the element is detached during the checks, the whole action is retried.
+     * Scroll the element into view if needed.
+     * Use Page.touchscreen() to tap the center of the element, or the specified position.
+     * Wait for initiated navigations to either succeed or fail, unless noWaitAfter option is set.
+     *
+     * @param selector css or xpath
+     * @return instance of Actor
+     */
+    public Actor tap(String selector) {
+        this.currentFrame().tap(selector);
+        return this;
+    }
+
+    /**
+     * This method expects selector to point to an input element.
+     * <p>
+     * Sets the value of the file input to these file paths or files.
+     * If some of the filePaths are relative paths, then they are resolved relative to
+     * the current working directory. For empty array, clears the selected files.
+     *
+     * @param selector css or xpath
+     * @param file     to upload
+     * @return instance of Actor
+     */
+    public Actor uploadFile(String selector, Path file) {
+        this.currentFrame().setInputFiles(selector, file);
+        return this;
+    }
+
+    /**
+     * This method expects selector to point to an input element.
+     * <p>
+     * Sets the value of the file input to these file paths or files.
+     * If some of the filePaths are relative paths, then they are resolved relative to
+     * the current working directory. For empty array, clears the selected files.
+     *
+     * @param selector css or xpath
+     * @param files    to upload
+     * @return instance of Actor
+     */
+    public Actor uploadFiles(String selector, List<Path> files) {
+        this.currentFrame().setInputFiles(selector, files.toArray(Path[]::new));
+        return this;
+    }
+
+    // Expect
+
+    public Expect expectThat() {
+        return new Expect(this).withTimeout(this.configuration.getExceptTimeout());
+    }
+
+    public Expect softExpectThat() {
+        return new Expect(this).withSoftExpect(true).withTimeout(this.configuration.getExceptTimeout());
     }
 
     // Helpers
@@ -344,19 +481,17 @@ public final class Actor {
      * @return instance of Actor
      */
     public Actor setContent(String html) {
-        this.getBrowserManager().getPage().setContent(html);
+        this.currentFrame().setContent(html);
         return this;
     }
 
     // Execute actions and tasks methods
 
     private <T extends Action> T executeAction(T action) {
-        action.setActor(this);
         return action;
     }
 
     private Actor executeTask(Task task) {
-        task.setActor(this);
         task.perform();
         return this;
     }
@@ -365,8 +500,9 @@ public final class Actor {
 
     /**
      * This method allows user to put his implementation in to invocation chain
+     *
      * @param action instance of class which is child of Action class.
-     * @param <T> any type which is a child of Action class.
+     * @param <T>    any type which is a child of Action class.
      * @return instance of Action
      */
     public <T extends Action> T attemptTo(T action) {
@@ -375,6 +511,7 @@ public final class Actor {
 
     /**
      * This method perform users task.
+     *
      * @param task instance of class which is child of Task class.
      * @return instance of Action
      */
@@ -384,8 +521,9 @@ public final class Actor {
 
     /**
      * This method allows user to put his implementation in to invocation chain
+     *
      * @param action instance of class which is child of Action class.
-     * @param <T> any type which is a child of Action class.
+     * @param <T>    any type which is a child of Action class.
      * @return instance of Action
      */
     public <T extends Action> T does(T action) {
@@ -394,6 +532,7 @@ public final class Actor {
 
     /**
      * This method perform users task.
+     *
      * @param task instance of class which is child of Task class.
      * @return instance of Action
      */
@@ -403,8 +542,9 @@ public final class Actor {
 
     /**
      * This method allows user to put his implementation in to invocation chain
+     *
      * @param action instance of class which is child of Action class.
-     * @param <T> any type which is a child of Action class.
+     * @param <T>    any type which is a child of Action class.
      * @return instance of Action
      */
     public <T extends Action> T expectThat(T action) {
@@ -413,6 +553,7 @@ public final class Actor {
 
     /**
      * This method perform users task.
+     *
      * @param task instance of class which is child of Task class.
      * @return instance of Action
      */
